--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,8 +9,27 @@ body {
 
 main {
     background-color: white;
-    height: 500px;
+    width: 560px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgb(0, 0, 0, 0.473);
+}
+
+h1 {
+    font-size: 2em;
+    color: rgb(58, 0, 112)
+}
+
+img.lado {
+    float: right;
+}
+
+h2 {
+    font-size: 1.5em;
+    color: rgb(58, 0, 112)
+}
+
+a:hover {
+    text-decoration: underline;
+    color: rgb(26, 26, 255);
 }
