--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(204, 157, 248);
+    background-color: #acacff;
 }
 
 main {
@@ -12,21 +12,27 @@ main {
     width: 560px;
     margin: auto;
     padding: 10px;
-    box-shadow: 3px 3px 5px rgb(0, 0, 0, 0.473);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
 }
 
 h1 {
     font-size: 2em;
-    color: rgb(58, 0, 112)
+    color: rgb(58, 0, 112);
+}
+
+h2 {
+    font-size: 1.5em;
+    color: rgb(58, 0, 112);
 }
 
 img.lado {
     float: right;
 }
 
-h2 {
-    font-size: 1.5em;
-    color: rgb(58, 0, 112)
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(58, 0, 112);
 }
 
 a:hover {
